Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48720

Stack before/after warnings in auto tests

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.6.0 Alpha
    • Quick: Controls 2
    • None
    • 5cc36f74ef86e0fcc5a44c8ca32448a8efeaa8d3

      The same warning in tst_swipeview and tst_tabbar. The warning originates from QQuickRepeater::initItem().

      $ ./tst_controls
      [...]
      QWARN  : tst_controls::SwipeView::test_repeater() QQuickItem::stackBefore: Cannot stack before 0x7ffe4aafb520, which must be a sibling
      QWARN  : tst_controls::SwipeView::test_repeater() QQuickItem::stackAfter: Cannot stack after 0x7ffe4ad615e0, which must be a sibling
      [...]
      QWARN  : tst_controls::TabBar::test_repeater() QQuickItem::stackBefore: Cannot stack before 0x7ffe4aa5e870, which must be a sibling
      QWARN  : tst_controls::TabBar::test_repeater() QQuickItem::stackAfter: Cannot stack after 0x7ffe4aa98ed0, which must be a sibling
      [...]
      

        For Gerrit Dashboard: QTBUG-48720
        # Subject Branch Project Status CR V

            Unassigned Unassigned
            jpnurmi J-P Nurmi
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes