Container: fix stack before/after warnings

When inserting items to a Container, reparent them to the "effective"
content item. If the Container's content item is a ListView (Flickable),
the effective content item is the content item of the ListView, not the
ListView itself.

Change-Id: I8c4abbac811b0aa6b56f2cdf87656a01279d5bf7
Task-number: QTBUG-48720
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>